--- a/src/app/template/home/home.component.html
+++ b/src/app/template/home/home.component.html
@@ -118,6 +118,6 @@
     </section>
     <section class="emi-calculator">
         <h2>Vehicle Loan EMI Calculator</h2>
-        <p>Please click <a href="http://localhost:4200/carLoan/emi">here</a> for EMI Calculator</p>
+        <p>Please click <a routerLink="/carLoan/emi">here</a> for EMI Calculator</p>
     </section>
 </body>
