--- a/src/app/template/about/about.component.css
+++ b/src/app/template/about/about.component.css
@@ -1,22 +1,23 @@
-.card {
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-  }
-  
-  .card-title {
-    color: #343a40;
-  }
-  
-  .card-text {
-    margin-bottom: 1.5rem;
-  }
-  
-  .list-ordered {
-    margin-left: 1.5rem;
-  }
-  
-  .list-ordered li,
-  ul {
-    margin-bottom: 1rem;
-  }
+.card-title {
+  font-size: 2rem;
+}
+
+.card-text, ul, ol {
+  font-size: 1.1rem;
+}
+
+.list-ordered li {
+  margin-bottom: 10px;
+}
+
+ul li, ol li {
+  display: flex;
+  align-items: center;
+}
+
+ul li i, ol li i {
+  margin-right: 8px;
+}
+.icon-small {
+  font-size: 1.4rem;
+}
